--- a/docs/.vuepress/public/admin/config.yml
+++ b/docs/.vuepress/public/admin/config.yml
@@ -13,3 +13,60 @@ collections:
     fields: # The fields for each document, usually in front matter
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Body", name: "body", widget: "markdown"}
+  # - name: "settings"
+  #   label: "Settings"
+  #   delete: false # Prevent users from deleting documents in this collection
+  #   create: true
+  #   editor:
+  #     preview: false
+  #   files:
+  #     - name: "general"
+  #       label: "Site Settings"
+  #       file: "mainmenu.json"
+  #       description: "General Site Settings"
+  #       fields:
+  #         - {label: "Global title", name: "site_title", widget: "string"}
+
+          # - label: "Post Settings"
+          #   name: posts
+          #   widget: "object"
+          #   fields:
+          #     - {label: "Number of posts on frontpage", name: front_limit, widget: number}
+          #     - {label: "Default Author", name: author, widget: string}
+          #     - {label: "Default Thumbnail", name: thumb, widget: image, class: "thumb"}
+  # - label: "TestPages"
+  #   name: "testpage"
+  #   create: true
+  #   files:
+  #   - label: "Locations Page"
+  #     name: "locations"
+  #     file: "docs/.vuepress/mainmenu.yml"
+  #     fields:
+  #       - {label: "Title", name: "title", widget: "string"}
+  #       - {label: "Intro", name: "intro", widget: "markdown"}
+  #       - label: "Locations"
+  #         name: "locations"
+  #         widget: "list"
+  #         fields:
+  #           - {label: "Name", name: "name", widget: "string"}
+  #           - {label: "Address", name: "address", widget: "string"}
+
+
+  - name: "menu"
+    label: "Menu"
+    # create: true
+    files: 
+      - label: "Main Menu"
+        name: "mainmenu"
+        file: "docs/.vuepress/mainmenu.json"
+        fields:
+          # - {label: "Title", name: "title", widget: "string"}
+          # - {label: "Body", name: "body", widget: "markdown"}
+          - label: "Menu Item"
+            name: "menuitem"
+            widget: "relation"
+            collection: "doc"
+            searchFields: ["title"]
+            valueField: "title"
+            # fields:
+            # - {label: "Title", name: "title", widget: "string"}
