--- a/docs/.vuepress/public/admin/config.yml
+++ b/docs/.vuepress/public/admin/config.yml
@@ -12,6 +12,7 @@ collections:
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - {label: "Title", name: "title", widget: "string"}
+      - {label: "Slug", name: "slug", default: "{{slug}}"}
       - {label: "Body", name: "body", widget: "markdown"}
 
   - name: "menu"
@@ -23,8 +24,8 @@ collections:
         name: "mainmenu"
         file: "docs/.vuepress/mainmenu.json"
         fields:
-          - label: "Menu Item"
-            name: "menuitem"
+          - label: "Menu"
+            name: "menu"
             widget: "list"
             allow_add: true
             fields:
@@ -36,7 +37,7 @@ collections:
                 searchFields: ["title"]
                 valueField: "title"
               - label: "Submenu"
-                name: "submenuitem"
+                name: "children"
                 widget: "list"
                 allow_add: true
                 fields:
@@ -46,4 +47,4 @@ collections:
                     collection: "doc"
                     displayFields: ["title"]
                     searchFields: ["title"]
-                    valueField: "title"
+                    valueField: "slug"
