--- a/docs/.vuepress/public/admin/config.yml
+++ b/docs/.vuepress/public/admin/config.yml
@@ -12,39 +12,50 @@ collections:
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - {label: "Title", name: "title", widget: "string"}
-      - {label: "Slug", name: "slug", default: "{{slug}}"}
+      # - {label: "Slug", name: "slug", default: "{{slug}}"}
       - {label: "Body", name: "body", widget: "markdown"}
 
-  - name: "menu"
-    label: "Menu"
-    # editor:
-    #   preview: false
-    files: 
-      - label: "Main Menu"
-        name: "mainmenu"
+  - name: "settings"
+    label: "Settings"
+    files:
+      - name: "mainmenu"
+        label: "Main Menu"
         file: "docs/.vuepress/mainmenu.json"
-        fields:
-          - label: "Menu"
-            name: "menu"
-            widget: "list"
-            allow_add: true
-            fields:
-              - label: "Document"
-                name: "document"
-                widget: "relation"
-                collection: "doc"
-                displayFields: ["title"]
-                searchFields: ["title"]
-                valueField: "title"
-              - label: "Submenu"
-                name: "children"
-                widget: "list"
-                allow_add: true
-                fields:
-                  - label: "Document"
-                    name: "document"
-                    widget: "relation"
-                    collection: "doc"
-                    displayFields: ["title"]
-                    searchFields: ["title"]
-                    valueField: "slug"
+          fields:
+            - name: "menuitems"
+              label: "Menu Items"
+              widget: "text"
+
+  # - name: "menu"
+  #   label: "Menu"
+  #   # editor:
+  #   #   preview: false
+  #   files: 
+  #     - label: "Main Menu"
+  #       name: "mainmenu"
+  #       file: "docs/.vuepress/mainmenu.json"
+  #         fields:
+  #           - label: "Menu"
+  #             name: "menu"
+  #             widget: "list"
+  #             allow_add: true
+  #             fields:
+  #               - label: "Document"
+  #                 name: "document"
+  #                 widget: "relation"
+  #                 collection: "doc"
+  #                 displayFields: ["title"]
+  #                 searchFields: ["title"]
+  #                 valueField: "title"
+  #               - label: "Submenu"
+  #                 name: "children"
+  #                 widget: "list"
+  #                 allow_add: true
+  #                 fields:
+  #                   - label: "Document"
+  #                     name: "document"
+  #                     widget: "relation"
+  #                     collection: "doc"
+  #                     displayFields: ["title"]
+  #                     searchFields: ["title"]
+  #                     valueField: "slug"
